<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- Add your UI elements here -->


    <Button
        android:id="@+id/btnLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/linear_layout" />

    <Button
        android:id="@+id/btnConstraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/constraint_layout" />

    <Button
        android:id="@+id/btnRelative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/relative_layout" />

    <Button
        android:id="@+id/btnFrame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/frame_layout" />

    <Button
        android:id="@+id/btnTable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/table_layout" />

    <Button
        android:id="@+id/btnGrid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/grid_layout" />
</LinearLayout>
